--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         padding: 0;
         overflow: initial;
       }
+      
+      /* .amis-scope .cxd-Table-fixedTop.in {
+        top: 60px !important;
+      } */
+
+      .amis-scope .cxd-JsonField .string-value {
+        word-break: break-all;
+      }
     </style>
   </head>
   <body>
