--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         overflow: initial;
       }
       
-      /* .amis-scope .cxd-Table-fixedTop.in {
-        top: 60px !important;
-      } */
+      .amis-scope .cxd-Table-fixedTop.in {
+        margin-top: 19px;
+      }
 
       .amis-scope .cxd-JsonField .string-value {
         word-break: break-all;
