调整表格浮动样式

--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
       }
       
       .amis-scope .cxd-Table-fixedTop.in {
-        margin-top: 19px;
+        margin-top: 9px;
+      }
+      
+      @media (min-width: 576px) {
+        .amis-scope .cxd-Crud-toolbar {
+          margin-left: 0;
+          margin-top: 0;
+        }
       }
 
       .amis-scope .cxd-JsonField .string-value {
